# termgpu

./: Cargo.toml  README.md
examples/: basic.rs  basic.wgsl  main.rs
src/: app.rs  lib.rs  terminal.rs
src/event/: input.rs  mod.rs
src/pbr/: camera.rs  mesh.rs  mod.rs  transform.rs  voxel_mesh.rs
src/primitives/: mod.rs  triangle.rs
src/render/: error.rs  mod.rs  vertex.rs
src/render/hal/: buffer.rs  macros.rs  mod.rs  pipeline.rs  resource.rs  shader.rs  texture.rs
src/ui/: mod.rs
src/utils/: macros.rs  mod.rs
