[package]
name = "termgpu"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
bitflags = "2.6.0"
bytemuck = { version = "1.16.1", features = ["derive"] }
crossterm = "0.29.0"
derive-getters = "0.4.0"
game-loop = "1.3.0"
include-wgsl-oil = "0.2.7"
nalgebra-glm = { version = "0.19.0", features = ["serde-serialize", "convert-bytemuck"] }
pollster = "0.4.0"
pretty-type-name = "1.0.1"
rand = "0.9.1"
readonly = "0.2.12"
serde = { version = "1.0.204", features = ["derive", "rc"] }
thiserror = "1.0.62"
wgpu = { version = "22", default-features = false, features = ["wgsl"] }
