[package]
name = "termgpu"
version = "0.1.0"
edition = "2024"
authors = ["Koncepto Sociala <sanerhp.mail@gmail.com>"]
description = "A GPU-accelerated terminal graphics engine for Rust, enabling real-time 3D rendering in the terminal."
license = "MIT"
repository = "https://github.com/yourusername/termgpu"
homepage = "https://github.com/yourusername/termgpu"
documentation = "https://docs.rs/termgpu"
readme = "README.md"
keywords = ["terminal", "graphics", "gpu", "wgpu", "crossterm"]
categories = ["graphics", "command-line-utilities", "rendering", "visualization"]
exclude = [".github/", "target/", "examples/*.png", "*.log"]

[dependencies]
anyhow = "1.0.98"
bitflags = "2.6.0"
bytemuck = { version = "1.16.1", features = ["derive"] }
crossterm = "0.29.0"
derive-getters = "0.4.0"
futures-intrusive = "0.5.0"
game-loop = "1.3.0"
image = "0.25.6"
include-wgsl-oil = "0.2.7"
log = "0.4.27"
nalgebra-glm = { version = "0.19.0", features = ["serde-serialize", "convert-bytemuck"] }
pollster = "0.4.0"
pretty-type-name = "1.0.1"
serde = { version = "1.0.204", features = ["derive", "rc"] }
thiserror = "1.0.62"
wgpu = { version = "22", default-features = false, features = ["wgsl"] }

[badges]
maintenance = { status = "actively-developed" }
